# waterbot

./: scan_data.txt
kai/: 1.py  Sliderail.py  hc-sr04.py  ms5837main.py  read_serial.py  test.py  water.py  waterpump.py
log/: latest_build
my_robot/: CMakeLists.txt  package.xml
my_robot/config/: mecanum_controller.yaml
my_robot/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  mecanum_base.xacro  mecanum_wheel_inertial.xacro
my_robot/launch/: camera.launch.py  launch_sim.launch.py  rplidar.launch.py
src/waterbot/my_robot/: CMakeLists.txt  package.xml
src/waterbot/my_robot/config/: laser_filter.yaml  rplidar_filter.yaml
src/waterbot/my_robot/description/: robot.urdf.xacro  ros2_control.xacro
src/waterbot/my_robot/launch/: camera.launch.py  hand.launch.py  keyboard.launch.py  move.launch.py  rplidar.launch.py  rplidar2.launch.py  rsp.launch.py
src/waterbot/my_robot/launch/log/: latest_build
src/waterbot/my_robot/my_robot/: camera.py  decision4.py  encoder.py  enocder2.py  hand.py  hcsr04.py  keyboard.py  move.py  obstacle1.py  partrol3.py  rplidar.py  serial_comm.py  sss.py  water.py  water2.py  ws.py  yolorun.py  yolorun2.py  yolorunnning.py  yolorunn等等測.py  yolorun原檔.py
src/waterbot/my_robot/my_robot/log/: latest_build
src/waterbot/rplidar_ros/src/: rplidar_node.cpp
